# flowdb

./: .gitignore  AGENTS.md  Cargo.toml  README.md  intro-zh.md  intro.md  upsert-demo.sh
.github/workflows/: release.yml
benches/: flowdb_bench.rs
bindings/node/: Cargo.toml  index.js  package-lock.json  package.json  tsconfig.json
bindings/node/artifacts/: flowdb-node.darwin-arm64.node
bindings/node/scripts/: publish-platforms.js
bindings/node/src/: lib.rs
bindings/node/ts/: index.ts  jsondb.ts  transaction.ts  types.ts
docs/: api.md  architecture-analysis.md  flowdb-evolution-en.md  flowdb-evolution.md
docs/articles/: article-en.md  article-zh.md
docs/tutorials/: index.md
docs/tutorials/en/: 01-basic-engine.md  02-basic-jsondb.md  03-supabase-pattern.md  04-supabase-server.md  05-nodejs.md
docs/tutorials/zh/: 01-basic-engine.md  02-basic-jsondb.md  03-supabase-pattern.md  04-supabase-server.md  05-nodejs.md
examples/: basic_engine.rs  basic_jsondb.rs  flowdb-vs-rocksdb.rs  quickstart-node.js  supabase-server.rs  supabase-ui.html  supabase_example.rs
flowdb-derive/: Cargo.toml
flowdb-derive/src/: lib.rs
src/: admin.rs  auth.rs  block_meta_index.rs  bloom.rs  cache.rs  compaction.rs  engine.rs  error.rs  gc.rs  http.rs  lib.rs  manifest.rs  memtable.rs  prometheus_template.txt  record.rs  sstable.rs  stats.rs  udp.rs  wal.rs  write_worker.rs
src/jsondb/: db.rs  encoding.rs  helpers.rs  mod.rs  query.rs  schema.rs  tests.rs  transaction.rs
tests/: fuzz_tests.rs  http_integration.rs  network_integration.rs
