[package]
name = "flowdb"
version = "0.3.0"
edition = "2024"
authors = ["jinti<shenjindi@fourz.cn>"]
repository = "https://github.com/restsend/flowdb"
description = "A high-performance embedded time-series storage engine written in Rust, powered by an LSM-tree architecture."
readme = "README.md"
keywords = ["database", "embedded", "lsm-tree", "persistence", "time-series"]
categories = ["database"]
license = "MIT"

[lib]
name = "flowdb"
path = "src/lib.rs"

[[bin]]
name = "flowdb-stress"
path = "src/bin/flowdb-stress.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zstd = { version = "0.13", features = ["zstdmt"] }
parking_lot = "0.12"
tracing = "0.1"
thiserror = "2"
hdrhistogram = "7"
toml = "1.1.2"
memmap2 = "0.9"
clap = { version = "4", features = ["derive"] }
tracing-subscriber = "0.3"
lru = "0.18"
ahash = "0.8"
lz4_flex = "0.13.1"

[dev-dependencies]
tempfile = "3"
criterion = "0.8.2"
arbitrary = { version = "1", features = ["derive"] }
rocksdb = "0.24"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)', 'cfg(coverage_nightly)'] }

[[bench]]
name = "flowdb_bench"
harness = false
