[package]
name = "flowdb"
version = "0.7.0"
edition = "2024"
authors = ["jinti<shenjindi@fourz.cn>"]
repository = "https://github.com/restsend/flowdb"
description = "A high-performance embedded time-series + JSON document storage engine (LSM-tree), with built-in IndexedDB-compatible API."
readme = "README.md"
keywords = ["database", "embedded", "lsm-tree", "json", "indexeddb"]
categories = ["database"]
license = "MIT"

[lib]
name = "flowdb"
path = "src/lib.rs"

[[bin]]
name = "flowdb-stress"
path = "src/bin/flowdb-stress.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
tracing = "0.1"
thiserror = "2"
hdrhistogram = "7"
toml = "1.1.2"
memmap2 = "0.9"
clap = { version = "4", features = ["derive"] }
tracing-subscriber = "0.3"
lru = "0.18"
ahash = "0.8"
lz4_flex = "0.13.1"
flowdb-derive = { version = "0.7", path = "flowdb-derive" }

[dev-dependencies]
tempfile = "3"
criterion = "0.8.2"
arbitrary = { version = "1", features = ["derive"] }
rocksdb = "0.24"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)', 'cfg(coverage_nightly)'] }

[[bench]]
name = "flowdb_bench"
harness = false
